@@ -22,7 +22,7 @@ package io.jenetics.jpx;
 import static java.lang.String.format;
 import static java.util.Objects.hash;
 import static java.util.Objects.requireNonNull;
-import static io.jenetics.jpx.Format.intString;
+import static io.jenetics.jpx.Format.toIntString;
 import static io.jenetics.jpx.Lists.copyOf;
 import static io.jenetics.jpx.Lists.copyTo;
 
@@ -31,6 +31,7 @@ import java.io.DataOutput;
 import java.io.IOException;
 import java.io.InvalidObjectException;
 import java.io.ObjectInputStream;
+import java.io.Serial;
 import java.io.Serializable;
 import java.net.URI;
 import java.util.ArrayList;
@@ -69,6 +70,7 @@ import io.jenetics.jpx.GPX.Version;
  */
 public final class Route implements Iterable<WayPoint>, Serializable {
 
+	@Serial
 	private static final long serialVersionUID = 2L;
 
 	private final String _name;
@@ -288,15 +290,15 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 	@Override
 	public boolean equals(final Object obj) {
 		return obj == this ||
-			obj instanceof Route &&
-			Objects.equals(((Route)obj)._name, _name) &&
-			Objects.equals(((Route)obj)._comment, _comment) &&
-			Objects.equals(((Route)obj)._description, _description) &&
-			Objects.equals(((Route)obj)._source, _source) &&
-			Objects.equals(((Route)obj)._type, _type) &&
-			Lists.equals(((Route)obj)._links, _links) &&
-			Objects.equals(((Route)obj)._number, _number) &&
-			Objects.equals(((Route)obj)._points, _points);
+			obj instanceof Route route &&
+			Objects.equals(route._name, _name) &&
+			Objects.equals(route._comment, _comment) &&
+			Objects.equals(route._description, _description) &&
+			Objects.equals(route._source, _source) &&
+			Objects.equals(route._type, _type) &&
+			Lists.equals(route._links, _links) &&
+			Objects.equals(route._number, _number) &&
+			Objects.equals(route._points, _points);
 	}
 
 	@Override
@@ -638,7 +640,8 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 			points(
 				_points.stream()
 					.map(mapper)
-					.collect(Collectors.toList())
+					.map(WayPoint.class::cast)
+					.toList()
 			);
 
 			return this;
@@ -653,7 +656,7 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 			points(
 				_points.stream()
 					.flatMap(wp -> mapper.apply(wp).stream())
-					.collect(Collectors.toList())
+					.toList()
 			);
 
 			return this;
@@ -666,7 +669,6 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 				? extends List<WayPoint>> mapper
 		) {
 			points(mapper.apply(_points));
-
 			return this;
 		}
 
@@ -823,10 +825,12 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 	 *  Java object serialization
 	 * ************************************************************************/
 
+	@Serial
 	private Object writeReplace() {
-		return new Serial(Serial.ROUTE, this);
+		return new SerialProxy(SerialProxy.ROUTE, this);
 	}
 
+	@Serial
 	private void readObject(final ObjectInputStream stream)
 		throws InvalidObjectException
 	{
@@ -876,19 +880,22 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 	}
 
 	// Define the needed writers for the different versions.
-	private static final XMLWriters<Route> WRITERS = new XMLWriters<Route>()
-		.v00(XMLWriter.elem("name").map(r -> r._name))
-		.v00(XMLWriter.elem("cmt").map(r -> r._comment))
-		.v00(XMLWriter.elem("desc").map(r -> r._description))
-		.v00(XMLWriter.elem("src").map(r -> r._source))
-		.v11(XMLWriter.elems(Link.WRITER).map(r -> r._links))
-		.v10(XMLWriter.elem("url").map(Route::url))
-		.v10(XMLWriter.elem("urlname").map(Route::urlname))
-		.v00(XMLWriter.elem("number").map(r -> intString(r._number)))
-		.v00(XMLWriter.elem("type").map(r -> r._type))
-		.v00(XMLWriter.doc("extensions").map(gpx -> gpx._extensions))
-		.v10(XMLWriter.elems(WayPoint.xmlWriter(Version.V10, "rtept")).map(r -> r._points))
-		.v11(XMLWriter.elems(WayPoint.xmlWriter(Version.V11, "rtept")).map(r -> r._points));
+	private static XMLWriters<Route>
+	writers(final Function<? super Number, String> formatter) {
+		return new XMLWriters<Route>()
+			.v00(XMLWriter.elem("name").map(r -> r._name))
+			.v00(XMLWriter.elem("cmt").map(r -> r._comment))
+			.v00(XMLWriter.elem("desc").map(r -> r._description))
+			.v00(XMLWriter.elem("src").map(r -> r._source))
+			.v11(XMLWriter.elems(Link.WRITER).map(r -> r._links))
+			.v10(XMLWriter.elem("url").map(Route::url))
+			.v10(XMLWriter.elem("urlname").map(Route::urlname))
+			.v00(XMLWriter.elem("number").map(r -> toIntString(r._number)))
+			.v00(XMLWriter.elem("type").map(r -> r._type))
+			.v00(XMLWriter.doc("extensions").map(gpx -> gpx._extensions))
+			.v10(XMLWriter.elems(WayPoint.xmlWriter(Version.V10, "rtept", formatter)).map(r -> r._points))
+			.v11(XMLWriter.elems(WayPoint.xmlWriter(Version.V11, "rtept", formatter)).map(r -> r._points));
+	}
 
 
 	// Define the needed readers for the different versions.
@@ -906,11 +913,13 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 		.v10(XMLReader.elems(WayPoint.xmlReader(Version.V10, "rtept")))
 		.v11(XMLReader.elems(WayPoint.xmlReader(Version.V11, "rtept")));
 
-	static XMLWriter<Route> xmlWriter(final Version version) {
-		return XMLWriter.elem("rte", WRITERS.writers(version));
+	static XMLWriter<Route> xmlWriter(
+		final Version version,
+		final Function<? super Number, String> formatter
+	) {
+		return XMLWriter.elem("rte", writers(formatter).writers(version));
 	}
 
-	@SuppressWarnings("unchecked")
 	static XMLReader<Route> xmlReader(final Version version) {
 		return XMLReader.elem(
 			version == Version.V10 ? Route::toRouteV10 : Route::toRouteV11,
